body img no longer cropped

--- a/src/components/Body.css
+++ b/src/components/Body.css
@@ -109,7 +109,9 @@
 
 @media (max-width: 600px) {
   .body-img {
-    height: auto;
+    height: 100%;
+    max-width: auto;
+    transform: scale(1.5);
   }
 }
 
